# pr2_picking

./: .gitignore  CMakeLists.txt  package.xml
euslisp/: pr2-pick-simulator.l  pr2-pick.l  pr2-receive-box-simulator.l  pr2-receive-object-simulator.l
launch/: detect_rgb.launch  my_pr2_object_segmentation_3d.launch  object_segmentation_3d.launch  pr2_detect_3_colors.launch  pr2_gazebo.launch  pr2_kinect_and_laser.launch  pr2_obj_segment_and_view_pr2.launch  record.launch  record.launch~  rosbag_play_pr2_kinect_and_laser.launch  rosbag_play_pr2_kinect_and_laser.launch~  test_pick_pet_bottle.launch
node_scripts/: fcn_object_segmentation.py  robot_cal_tilt_profile.py
rvizconfig/: pr2.rviz  pr2_gazebo.rviz  rosbag_play_kinect_and_laser.rviz
test/: astra_hand.launch
tmp/: astra_hand.launch  depth_16111911511.yaml  depth_16112210193.yaml  depth_16112210196.yaml  depth_16112210224.yaml  rgb_16112210193.yaml  rgb_16112210224.yaml
worlds/: small_room.world
