<?xml version="1.0"?>
<package>
  <name>pr2_picking</name>
  <version>0.0.0</version>
  <description>The pr2_picking package</description>

  <maintainer email="uchimi@jsk.imi.i.u-tokyo.ac.jp">Yuto Uchimi</maintainer>

  <license>BSD</license>

  <author email="uchimi@jsk.imi.i.u-tokyo.ac.jp">Yuto Uchimi</author>

  <run_depend>cv_bridge</run_depend>
  <run_depend>depth_image_proc</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>image_proc</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>jsk_pcl_ros_utils</run_depend>
  <run_depend>jsk_topic_tools</run_depend>
  <run_depend>laser_assembler</run_depend>
  <run_depend>laser_scan_3d</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>openni2_launch</run_depend>
  <run_depend>pr2_gazebo</run_depend>
  <run_depend>pr2_msgs</run_depend>
  <run_depend>python-chainer-pip</run_depend>
  <run_depend>python-fcn-pip</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
